--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "dotenv-safe": "^6.1.0",
+    "nodemailer": "^6.2.1",
     "querystring": "^0.2.0",
     "unirest": "^0.6.0"
   }
