Criação das novas variáveis de ambiente.

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,11 @@ PROFITABILITY=
 TAXES=
 TOLERANCE=
 QUEUE_LENGTH=
+CURRENCY=
+SHORT_QUEUE_LENGTH=
+LONG_QUEUE_LENGTH=
+EMAIL_SERVICE=
+EMAIL_ADDRESS=
+EMAIL_PASSWORD=
+#true or false
+CAN_EXECUTE=
